# indoor_robot

launch_robot/: CMakeLists.txt  package.xml
launch_robot/.svn/: wc.db
launch_robot/README/: robot_overlay_ws.md
launch_robot/launch/: amcl.launch.xml  core.launch  launch_robot.launch  launch_robot_gazebo.launch
launch_robot/maps/: map.pgm  map.yaml  mymap.yaml
launch_robot/params/: dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
launch_robot/shell/: lsPorts.sh
robot1_gazebo/launch/: gazebo_c.launch  gazebo_robot.launch  gazebo_wg.launch
robot_qt/.svn/: wc.db
robot_qt/resources/: images.qrc
robot_qt/src/: README.md
robot_qt/src/T3base/: T3IOBase.cpp
robot_qt/src/config/: config.hpp  config_image.hpp  config_ui.hpp
robot_qt/src/controller/: T3AirController.cpp  T3AirController.hpp  T3BeginController.cpp  T3BeginController.hpp  T3ExpressController.cpp  T3ExpressController.hpp  T3ExpressFinishController.hpp  T3FaceSignInController.cpp  T3FaceSignInController.hpp  T3GuestLoginController.cpp  T3GuideChoiceController.cpp  T3GuideController.hpp  T3HardwareSwitchController.cpp  T3MainController.cpp  T3MainController.hpp  T3MapController.hpp  T3StaffController.hpp  (+8 more)
t3_description/: CMakeLists.txt  README.md  package.xml
t3_description/.svn/: wc.db
t3_description/msg/: goals.msg
t3_description/urdf/: robot1_base_04.xacro  robot_base.gazebo  robot_base.xacro  turtlebot3_burger.urdf.xacro
t3_description/urdf/gazebo/: robot_base.xacro
t3_goal/: CMakeLists.txt
t3_goal/.svn/: wc.db
t3_goal/src/: t3_sendGoals.cpp
(+53 files in other folders)
