<?xml version="1.0"?>
<package>
  <name>t3_description</name>
  <version>0.1.6</version>
  <description>
    3D model of the t3 for simulation and visualization
  </description>
  <license>Apache License 2.0</license>
  <author email="36744020@qq.com">jc</author>
  <author email="36744020@qq.com">jc</author>
  <maintainer email="36744020@qq.com">jc</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
<!--  <build_depend>urdf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>-->
<!--  <build_depend>xacro</build_depend>-->
<!--  <build_depend>message_runtime</build_depend>-->
<!--  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>std_msgs</run_depend>-->
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
